syntax = "proto3";

package user;

import "model/user.proto";

service UserService {
    rpc registerUser(RegisterUserRequest) returns (RegisterUserResponse) {}
    rpc loginUser(LoginUserRequest) returns (LoginUserResponse) {}
    rpc resendActivationCode(ResendActivationCodeRequest) returns (ResendActivationCodeResponse) {}
    rpc activateUser(ActivateUserRequest) returns (ActivateUserResponse) {}
    rpc forgetPassword(ForgetPasswordRequest) returns (ForgetPasswordResponse) {}
    rpc resetPassword(ResetPasswordRequest) returns (ResetPasswordResponse) {}
    rpc verifyToken(VerifyTokenRequest) returns (VerifyTokenResponse) {}
    rpc googleOAuth(GoogleOAuthRequest) returns (GoogleOAuthResponse) {}
    rpc googleOAuthCallback(GoogleOAuthCallbackRequest) returns (GoogleOAuthCallbackResponse) {}
    rpc facebookOAuth(FacebookOAuthRequest) returns (FacebookOAuthResponse) {}
    rpc facebookOAuthCallback(FacebookOAuthCallbackRequest) returns (FacebookOAuthCallbackResponse) {}
}

message RegisterUserRequest {
    string email = 1;
    string firstName = 2;
    string lastName = 3;
    string password = 4;
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message ResendActivationCodeRequest {
    string email = 1;
}

message ActivateUserRequest {
    string code = 1;
}

message ForgetPasswordRequest {
    string email = 1;
}

message ResetPasswordRequest {
    string code = 1;
    string password = 2;
}

message VerifyTokenRequest {
    string token = 1;
}

message GoogleOAuthRequest {

}

message GoogleOAuthCallbackRequest {
    string token = 1;
}

message FacebookOAuthRequest {

}

message FacebookOAuthCallbackRequest {
    string token = 1;
}

message RegisterUserResponse { model.User item = 1; }

message LoginUserResponse { 
    model.User item = 1; 
    string token = 2;
}

message ResendActivationCodeResponse { model.User item = 1; }

message ActivateUserResponse { model.User item = 1; }

message ForgetPasswordResponse { 
    model.User item = 1; 
    string token = 2;
}

message ResetPasswordResponse { model.User item = 1; }

message VerifyTokenResponse { model.User item = 1; }

message GoogleOAuthResponse { string item = 1; }

message GoogleOAuthCallbackResponse { 
    model.User item = 1;
    string token = 2;
}

message FacebookOAuthResponse { string item = 1; }

message FacebookOAuthCallbackResponse { 
    model.User item = 1;
    string token = 2;
}